# chirpier-py

./: .gitignore  LICENCE  MANIFEST.in  README.md  example.py  pyproject.toml
.github/workflows/: workflow.yml
chirpier/: __init__.py  client.py  errors.py  log.py  utils.py
chirrop/: __init__.py  client.py  errors.py  log.py  utils.py
tests/: test_client.py  test_event.py  test_log.py  test_utils.py
